# SPBU_Programming_Hometasks

./: README.md
Functional_Programming_3semester/: README.md
Functional_Programming_3semester/delimccEvaluator/: README.md
Mathlogic_4semester/: README.md
Mathlogic_4semester/Sequent_Calculus/: CMakeLists.txt  FilePrinter.h  Formula.h  OneArgFormula.cpp  OneArgFormula.h  Parser.cpp  Parser.h  Sequence.cpp  Sequence.h  Solver.cpp  Solver.h  TwoArgsFormula.cpp  TwoArgsFormula.h  Variable.cpp  Variable.h  main.cpp
Mathlogic_4semester/Sequent_Calculus_Haskell/: Sequential_conclusion.hs
Mathlogic_4semester/SudokuSolver/: boolLanguage.txt  input.txt
Mathlogic_4semester/SudokuSolver/src/SudokuSolver/: BoolGenerator.java  Fileworker.java  Main.java  Triple.java
OOP_2semester/: README.md
OOP_2semester/BlackJack/: BlackJack.cpp  Bots.cpp  Players.cpp  cards.cpp  main.cpp  statistics.xlsx
OOP_2semester/SeaBattle/: out.txt
OOP_2semester/SourceMapEncoder/: ToBinary.cpp  ToBinary.js
OOP_2semester/simpleASMInterpreter/: Nod.txt  README.md  analyzer.c  asm.c  asm.h  commands.c  fib.txt  special_functions.c
Parallel_Programming_3semester/: README.md
Parallel_Programming_3semester/ConcurrentHashTable/src/ConcurrentHashTable/: Counter.java  Exam.java  HashTable.java  IExamSystem.java  Main.java  MyConcurrentList.java  Node.java  SimpleHashTable.java
Parallel_Programming_3semester/Fibers/rawFibers/: rawFibers.sln
Parallel_Programming_3semester/Fibers/rawFibers/rawFibers/: Fibers_FibersJavaAPI.h  (+5 more)
Parallel_Programming_3semester/ParallelQSort/: input.txt  output.txt
(+136 files in other folders)
